--- a/server/config.json
+++ b/server/config.json
@@ -12,8 +12,8 @@
 		},
 	"printers":{
 		"test1":{
-			"name":"koster",
-			"address":"192.168.42.18",
+			"name":"franklin",
+			"address":"192.168.42.16",
 			"port":9100
 			}
 		}
